<resources>
    <string name="app_name">Calculator</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_0">0</string>
    <string name="key_dot">.</string>
    <string name="enter">enter</string>
    <string name="input_field_info">Input field</string>
    <string name="input_area_data">Input</string>
    <string name="result_field_ifo">Result Field</string>
    <string name="result_area_data">Result</string>
</resources>